--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,66 @@
+.app-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.products-container {
+    width: 80%;
+}
+
+.responsive {
+    float: left;
+    margin: 10px;
+}
+
+div.gallery {
+    max-width: 300px;
+    height: 500px;
+    border: 2px solid #ccc;
+    /* margin: 5px; */
+    border-radius: 5px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: 350px;
+    object-fit: contain;
+  }
+
+div.desc {
+    padding: 2.5px;
+    text-align: center;
+}
+
+.name {
+    /* height: 100px; */
+    overflow: hidden;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 5px;
+    }}
+
+@media only screen and (max-width: 500px) {
+    .responsive {
+      width: 80%;
+      margin: 5px;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
