--- a/server/app/views/products/edit.html.erb
+++ b/server/app/views/products/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Product</h1>
+<div class="product-details">
+<h2>Editing Product</h2>
 
-<%= render 'form', product: @product %>
+    <%= render 'form', product: @product %>
+    <%= link_to 'Show', @product %> |
+    <%= link_to 'Back', products_path %>
+</div>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
