--- a/server/app/views/products/new.html.erb
+++ b/server/app/views/products/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Product</h1>
 
-<%= render 'form', product: @product %>
+<div class="product-details">
+    <%= link_to 'Back', products_path %>
 
-<%= link_to 'Back', products_path %>
+    <%= render 'form', product: @product %>
+</div>
+
+
