reset to the commit -add styles

--- a/server/app/views/products/_form.html.erb
+++ b/server/app/views/products/_form.html.erb
@@ -12,56 +12,42 @@
   <% end %>
 
   <div class="field">
-    <strong><%= form.label :product_name %></strong>
+    <%= form.label :product_name %>
     <%= form.text_field :product_name %>
   </div>
 
   <div class="field">
-    <strong>
-      <%= form.label :description %>
-    </strong>
+    <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <strong>
-      <%= form.label :image %>
-    </strong>
+    <%= form.label :image %>
     <%= form.text_area :image %>
   </div>
 
   <div class="field">
-    <strong>
     <%= form.label :price %>
-    </strong>
     <%= form.text_field :price %>
   </div>
 
   <div class="field">
-    <strong>
     <%= form.label :availability %>
-    </strong>
     <%= form.check_box :availability %>
   </div>
 
   <div class="field">
-    <strong>
     <%= form.label :product_category %>
-    </strong>
     <%= form.text_field :product_category %>
   </div>
 
   <div class="field">
-    <strong>
     <%= form.label :brand %>
-    </strong>
     <%= form.text_field :brand %>
   </div>
 
   <div class="field">
-    <strong>
-      <%= form.label :gtin %>
-    </strong>
+    <%= form.label :gtin %>
     <%= form.text_field :gtin %>
   </div>
 
