--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,63 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    text-align: center;
+}
+
+h1 {
+    color: #2CD5C4;
+    font-size: 30px;
+    margin-top: 30px;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 20px;
+    font-weight: 900;
+    font-size: 20px;
+    margin: 40px 0;
+    width: 100%;
+    max-width: 1500px;
+}
+
+nav a {
+    margin-right: 20px;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 1400px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.product {
+    height: 450px;
+    width: 320px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin: 10px;
+    object-fit: contain;
+}
+
+.product img {
+    height: 300px;
+    object-fit: contain;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.product p {
+    padding: 5px;
+}
+
 
