--- a/server/app/views/session/new.html.erb
+++ b/server/app/views/session/new.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="auth-form">
     <div>
         <h1>Frootbat Administrator</h1>
     </div>
@@ -15,7 +15,7 @@
 
             <%= submit_tag "Log in" %>
         <% end %>
-        or
+        <p>Don't have an account yet?</p>
         <a href="/users/new"><input type="button" value="Create new account" class="btn-signup"></a>
     </div>
 </div>
